# MLP_CUDA

./: .gitignore  CMakeLists.txt  MLP_CUDA.sln  MLP_CUDA.vcxproj  MLP_CUDA.vcxproj.filters  Makefile  README.md
demo/: demo.cu
docs/: cuda_concepts.md  math_derivation.md
docs/changelog/: 0001-initial-implementation.md  0002-optimizers-activations-reduction.md  0003-on-device-rng-and-dropout.md  0004-visual-studio-solution-and-demo.md  0005-cuda-streams-double-buffering.md  0006-fused-gemm-bias-activation.md  README.md
include/: common.cuh  dataset.cuh  fusion_demo.cuh  kernels.cuh  matrix.cuh  mlp.cuh  optim.cuh  stream_demo.cuh
src/: dataset.cu  fusion_demo.cu  kernels.cu  main.cu  matrix.cu  mlp.cu  optim.cu  stream_demo.cu
